# procedural-terrain

./: .gitmodules  CMakeLists.txt  README.md
include/: Chunk.h  Terrain.h  TerrainGame.h
res/mesh files (redundant)/: chunk.mesh  cube.mesh  dirtBlock.mesh  flatPlain.mesh  square.mesh  tempChunkData.mesh  terrain.mesh  triangle.mesh  waterQuad.mesh  webCube.mesh
res/shaders/2D/: UIFragment.shader  UIVertex.shader
res/shaders/3D/: ChunkFragment.shader  ChunkVertex.shader  cubeShader.frag  redFragment.shader  simple3DFragment.shader  simple3DVertex.shader  skyboxFragment.shader  skyboxVertex.shader  square.frag  square.vert
src/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Environment.cpp  Environment.h  Player.cpp  Player.h  RenderableChunk.cpp  RenderableChunk.h  Sun.cpp  Sun.h  Terrain.cpp  TerrainGame.cpp  TerrainGame.h  main.cpp
tests/: CMakeLists.txt  main.cpp
